<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" />



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/border">

    <!-- Include other widget or layout tags here. These are considered
            "child views" or "children" of the linear layout -->
    <TextView
        android:id="@+id/timeText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/timeText"
        android:textSize="20dp"
        android:layout_marginRight="60dp"/>

    <TextView
        android:id="@+id/time"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/time"
        android:textSize="20dp"
        android:layout_marginRight="55dp" />
    <TextView
        android:id="@+id/attemptText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/attemptText" />

    <EditText
        android:id="@+id/attempt"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:inputType="text"
        android:textSize="20dp"
        android:text="@string/attempt"
        android:background="@drawable/edit_text"
        android:editable="false"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:background="@drawable/border">

        <!-- Include other widget or layout tags here. These are considered
                "child views" or "children" of the linear layout -->
        <TextView
            android:id="@+id/succeededText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/succeededText"
            android:textSize="20dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/succeeded"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:inputType="text"
            android:textSize="20dp"
            android:text="@string/succeeded"
            android:background="@drawable/edit_text"
            android:layout_marginRight="60dp"
            android:editable="false"/>
        <TextView
            android:id="@+id/skippedText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/skippedText" />

        <EditText
            android:id="@+id/skipped"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:background="@drawable/edit_text"
            android:inputType="text"
            android:text="@string/skipped"
            android:textSize="20dp"
            android:editable="false"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:editable="false"
            android:inputType="text"
            android:textSize="20dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/b1"
           />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/b2" />
        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/b3" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/b4"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/minus" />
        <Button
            android:id="@+id/button_mul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/mul" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/button_op"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/op"
            />

        <Button
            android:id="@+id/button_cp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/cp" />
        <Button
            android:id="@+id/button_bs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/bs" />

        <Button
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/done"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>
</LinearLayout>


</android.support.v4.widget.DrawerLayout>

